[gd_scene load_steps=6 format=2]

[ext_resource path="res://Nodes/pickupArea.gd" type="Script" id=1]
[ext_resource path="res://Sprite/Modern tiles_Free/Interiors_free/32x32/Interiors_free_32x32.png" type="Texture" id=2]
[ext_resource path="res://Sprite/Modern tiles_Free/pallet.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=2]
radius = 21.706

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 384, 1440, 32, 64 )

[node name="ItemSlot" type="Node2D"]
script = ExtResource( 1 )

[node name="Slot1" type="Area2D" parent="."]
position = Vector2( 0, -256 )

[node name="Sprite" type="Sprite" parent="Slot1"]
modulate = Color( 1, 0, 0, 1 )
z_index = 3
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot1"]
scale = Vector2( 1.16, 1.16116 )
z_index = 3
shape = SubResource( 2 )

[node name="Slot2" type="Area2D" parent="."]
position = Vector2( 0, -192 )

[node name="Sprite" type="Sprite" parent="Slot2"]
modulate = Color( 0.0470588, 0.8, 1, 1 )
z_index = 3
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot2"]
scale = Vector2( 1.16, 1.16116 )
z_index = 3
shape = SubResource( 2 )

[node name="Slot3" type="Area2D" parent="."]
position = Vector2( 0, -128 )

[node name="Sprite" type="Sprite" parent="Slot3"]
modulate = Color( 0.172549, 1, 0, 1 )
position = Vector2( 0, 1.90735e-06 )
z_index = 3
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot3"]
scale = Vector2( 1.16, 1.16116 )
z_index = 3
shape = SubResource( 2 )

[node name="Slot4" type="Area2D" parent="."]
position = Vector2( 0, -64 )

[node name="Sprite" type="Sprite" parent="Slot4"]
modulate = Color( 1, 0, 0.678431, 1 )
position = Vector2( 0, 3.8147e-06 )
z_index = 3
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot4"]
scale = Vector2( 1.16, 1.16116 )
z_index = 3
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -56, -74 )
texture = SubResource( 3 )
